k8s/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplewhale
spec:
  selector:
    app: simplewhale
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
